# fix-x11-docks-on-wayland

./: CMakeLists.txt  README.md  install.sh  main.cpp  main.h  x_proxy_windows.cpp  x_proxy_windows.h
test2/: build_and_run.sh  map_listener  map_listener.c
wayland_protocol/: ext-foreign-toplevel-list-v1.h  generate_code_from_protocol_xml.sh
